2 parte da estilização do css

--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="utf-8"/>
         <title>Fale Conosco!</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="public/css/header.css"/>
+        <link rel="stylesheet" href="public/css/devaria.css"/>
+        <link rel="stylesheet" href="public/css/index.css"/>
     </head>
     <body>
         <header>
+            <a href="index.html" class="link-logo">
+                <img src="public/Images/logo-devaria-02.471a6e86.svg " alt="Logo devaria"/>
+            </a>
             <h1>Fale com a Devaria através dessa página</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
                     <li><a href="Professores.html">Professores </a></li>
                     <li><a href="FaleConosco.html">Fale Conosco </a></li>
                     <li><a href="devstar.html">Devstars</a></li>
