--- a/devstar.html
+++ b/devstar.html
@@ -2,14 +2,20 @@
 <html lang="pt-BR">
     <head>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="public/css/header.css"/>
+        <link rel="stylesheet" href="public/css/devaria.css"/>
+        <link rel="stylesheet" href="public/css/index.css"/>
         <title> Devstars! </title>
     </head>
     <body>
         <header>
+            <a href="index.html" class="link-logo">
+                <img src="public/Images/logo-devaria-02.471a6e86.svg " alt="Logo devaria"/>
+            </a>
             <h1>Ranking Devstars</h1>
-            <nav>
+            <nav class="letter-color">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale conosco</a></li>
                     <li><a href="devstar.html">Devstars</a></li>
@@ -40,7 +46,7 @@
     <br/>
     <br/>
     <section>
-        <h3>Pontuaçãode Comentários</h3>
+        <h3>Pontuação de Comentários</h3>
         <table>
             <thead>
                 <th>--</th>
@@ -57,6 +63,10 @@
         </table>
         <br/>
         <br/>
+    </section>
+    <section class="frame-devstar">
+        <h2>Ganhadores da Semana do DevStars!</h2>
+        <img src="public/Images/devstar-image.jpg" alt="ganhadores da semana devstar"/>
     </section>
     <section>
         <div>
