--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="index.html" class="link-logo">
                 <img src="public/Images/logo-devaria-02.471a6e86.svg " alt="Logo devaria"/>
             </a>
-            <nav class="color-red">
+            <nav>
                 <ul>
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale conosco</a></li>
@@ -24,8 +24,11 @@
         <main>
             <h1 class="title">Olá Mundo! Essa é a minha primeira página WEB</h1>
 
-            <section>
+            <section class="cover-container">
+                <figure>
                 <img src="public/Images/Devaria_logo.jpg" width="80%"  alt="Logo Devaria">
+                <figcaption>Foto de capa Devaria</figcaption>
+                </figure>
             </section>
             <br>
             <p>--</p>
