--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -15,7 +15,7 @@
             </a>
             <h1>Fale com a Devaria através dessa página</h1>
             <nav>
-                <ul>
+                <ul class="menu1">
                     <li><a href="Professores.html">Professores </a></li>
                     <li><a href="FaleConosco.html">Fale Conosco </a></li>
                     <li><a href="devstar.html">Devstars</a></li>
