--- a/devstar.html
+++ b/devstar.html
@@ -14,8 +14,8 @@
                 <img src="public/Images/logo-devaria-02.471a6e86.svg " alt="Logo devaria"/>
             </a>
             <h1>Ranking Devstars</h1>
-            <nav class="letter-color">
-                <ul>
+            <nav>
+                <ul class="menu1">
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale conosco</a></li>
                     <li><a href="devstar.html">Devstars</a></li>
