--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="public/Images/logo-devaria-02.471a6e86.svg " alt="Logo devaria"/>
             </a>
             <nav>
-                <ul>
+                <ul class="menu1">
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale conosco</a></li>
                     <li><a href="devstar.html">Devstars</a></li>
