--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="public/css/header.css"/>
         <link rel="stylesheet" href="public/css/devaria.css"/>
+        <link rel="stylesheet" href="public/css/footer.css"/>
         <link rel="stylesheet" href="public/css/index.css"/>
     </head>
     <body>
@@ -13,7 +14,7 @@
             <a href="index.html" class="link-logo">
                 <img src="public/Images/logo-devaria-02.471a6e86.svg " alt="Logo devaria"/>
             </a>
-            <h1>Fale com a Devaria através dessa página</h1>
+            <h1 align="center">Fale com a Devaria através dessa página</h1>
             <nav>
                 <ul class="menu1">
                     <li><a href="Professores.html">Professores </a></li>
@@ -23,7 +24,7 @@
             </nav>
         </header>
 
-        <main>
+        <main align="center">
             <h2>Para mandar uma mensagem para a Devaria preencha abaixo e clique em enviar.</h2>
             <section>
                 <form action="index.html">
