--- a/Professores.html
+++ b/Professores.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="public/css/header.css"/>
         <link rel="stylesheet" href="public/css/devaria.css"/>
+        <link rel="stylesheet" href="public/css/footer.css"/>
         <link rel="stylesheet" href="public/css/index.css"/>
     </head>
     <body>
@@ -23,7 +24,7 @@
             </nav>
         </header>
         <main>
-            <section>
+            <section align="center">
                 <div>
                     <img src="/public/Images/prof-jpeg.jpg" width="300px" alt="Professores Devaria" />
                 </div>
@@ -35,6 +36,8 @@
                     <p>
                         Todas as aulas de Back e Front serão conduzidas mais pelo Prof Rafa, e as aulas mais de gestão e opreações ficará com o Prof Daniel.
                     </p>
+                    <br>
+                    <p><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</i></p>
                 </article>
             </section>
         </main>
