--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="pt-BR">
     <head>
         <meta charset="utf-8"/>
-        <title> Olá Mundo! </title>
+        <title> Home </title>
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <link rel="stylesheet" href="public/css/header.css"/>
         <link rel="stylesheet" href="public/css/devaria.css"/>
+        <link rel="stylesheet" href="public/css/footer.css"/>
         <link rel="stylesheet" href="public/css/index.css"/>
     </head>
     <body>
@@ -22,19 +23,25 @@
             </nav>
         </header>
         <main>
-            <h1 class="title">Olá Mundo! Essa é a minha primeira página WEB</h1>
+            <h1 class="title" align="center">Olá Mundo! Essa é a minha primeira página WEB</h1>
 
             <section class="cover-container">
                 <figure>
-                <img src="public/Images/Devaria_logo.jpg" width="80%"  alt="Logo Devaria">
-                <figcaption>Foto de capa Devaria</figcaption>
+                <img src="public/Images/Devaria_logo.jpg" width="50%"  alt="Logo Devaria">
                 </figure>
             </section>
             <br>
-            <p>--</p>
+            <p></p>
             <br>
             <section>
+                <div align="center">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZEqYpFQZHsw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <br>
+                <h2>Lorem ipsum dolor sit amet</h2>
+                <p>
+                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                </div>
             </section>
         </main>
         <footer>
