--- a/devstar.html
+++ b/devstar.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="public/css/header.css"/>
         <link rel="stylesheet" href="public/css/devaria.css"/>
+        <link rel="stylesheet" href="public/css/footer.css"/>
         <link rel="stylesheet" href="public/css/index.css"/>
         <title> Devstars! </title>
     </head>
@@ -13,7 +14,7 @@
             <a href="index.html" class="link-logo">
                 <img src="public/Images/logo-devaria-02.471a6e86.svg " alt="Logo devaria"/>
             </a>
-            <h1>Ranking Devstars</h1>
+            <h1 align="center">Ranking Devstars</h1>
             <nav>
                 <ul class="menu1">
                     <li><a href="Professores.html">Professores</a></li>
@@ -22,11 +23,11 @@
                 </ul>
             </nav>
         </header>
-<main>
+<main align="center">
     <h2>Como fuciona os pontos Devstar</h2>
-    <section>
+    <section >
         <h3>Pontos recebidos atraves de desafios</h3>
-        <table>
+        <table align="center">
             <tr>
                 <th>-</th>
                 <th>No dia</th>
@@ -47,7 +48,7 @@
     <br/>
     <section>
         <h3>Pontuação de Comentários</h3>
-        <table>
+        <table align="center">
             <thead>
                 <th>--</th>
                 <th>Menos de 5</th>
@@ -68,11 +69,12 @@
         <h2>Ganhadores da Semana do DevStars!</h2>
         <img src="public/Images/devstar-image.jpg" alt="ganhadores da semana devstar"/>
     </section>
-    <section>
+    <section align="center">
         <div>
         <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/27MGFFJxpe0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br>
+        <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</b></p>
         </div>
     </section>
 </main>
